增加两个字段的处理
