# swagger/swagger.json
@@ -60,6 +60,13 @@
                     },
                     {
                         "in": "query",
+                        "name": "types",
+                        "description": "型号",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
                         "name": "game",
                         "description": "游戏",
                         "type": "string"
@@ -72,6 +79,12 @@
                     },
                     {
                         "in": "query",
+                        "name": "facebook",
+                        "description": "facebook",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
                         "name": "sign",
                         "description": "签名",
                         "required": true,
@@ -79,11 +92,11 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": ":sign is empty"
+                    },
                     "201": {
                         "description": "{int} models.DriverSurvey"
-                    },
-                    "403": {
-                        "description": ":sign is empty"
                     }
                 }
             },
@@ -97,7 +110,7 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "json格式，包含项年龄:Age,邮箱:Email,游戏:Game,名称:Name,地区/国家:Region,性别:Sexuality,签名:Sign,建议:Suggest",
+                        "description": "json格式，包含项年龄:Age,邮箱:Email,游戏:Game,名称:Name,地区/国家:Region,性别:Sexuality,签名:Sign,建议:Suggest,型号:Types,脸书:facebook",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.SurveyForm"
@@ -105,11 +118,11 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "body is empty"
+                    },
                     "201": {
                         "description": "{int} models.DriverSurvey"
-                    },
-                    "400": {
-                        "description": "body is empty"
                     }
                 }
             }
@@ -126,6 +139,10 @@
                 },
                 "Email": {
                     "description": "邮箱",
+                    "type": "string"
+                },
+                "Facebook": {
+                    "description": "facebook",
                     "type": "string"
                 },
                 "Game": {
@@ -150,6 +167,10 @@
                 },
                 "Suggest": {
                     "description": "建议",
+                    "type": "string"
+                },
+                "Types": {
+                    "description": "型号",
                     "type": "string"
                 }
             }
